// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@babel/parser@* 1`] = `
Object {
  "name": "@babel/parser",
  "raw": "@babel/parser@*",
  "semver": "*",
  "type": "range",
  "version": "1.0.0",
}
`;

exports[`@babel/parser@next 1`] = `
Object {
  "name": "@babel/parser",
  "raw": "@babel/parser@next",
  "semver": "next",
  "type": "tag",
  "version": "1.0.0",
}
`;
